# CCC_IgorMarcoMarcos_PampaTickets

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .gitignore  CLAUDE.md  Dockerfile  README.md  claude.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1dc1a0e716ac_remove_unique_constraint_celular_usuario.py  737c791faa66_ajustando_coluna_de_cpf_cnpj_com_máximo_.py  7e11e2798ca9_criando_coluna_de_celular_para_a_.py  8785b835354d_criando_tabelas_iniciais.py  926ffd590c99_adiciona_status_cancelado_ao_enum_.py  ac96aae550b4_adiciona_asaas_customer_id_em_.py  b8ac950013f9_adicionando_coluna_de_cpf_cnpj_para_a_.py  c4db6338c75c_muda_colunas_datetime_para_timezone_.py  f3a1c8e2d947_renomeia_gateway_transacao_id_para_charge_id.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  (+8 more)
backend/app/core/: config.py  datetime_utils.py  logging_config.py  validators.py
backend/app/db/: base.py  session.py
backend/app/models/: certificado.py  checkin.py  cortesia.py  cupom.py  evento.py  foto.py  ingresso.py  lote.py  pagamento.py  pedido.py  relatorio.py  usuario.py
backend/app/reports/: __init__.py  ingresso_pdf.py  relatorio_pdf.py
backend/app/repositories/: evento_repo.py  ingresso_repo.py  lote_repo.py  pagamento_repo.py  pedido_repo.py  reembolso_repo.py  usuario_repo.py
backend/app/schemas/: _types.py  evento.py  ingresso.py  lote.py  pedido.py  reembolso.py  relatorio.py  usuario.py
backend/docs/: project.md  requirements.md  roadmap.md  state.md
backend/scripts/: seed.py
(+103 files in other folders)
